@@ -184,7 +184,6 @@ public class UpdateStatement extends ModificationStatement
                                                                            boundNames,
                                                                            applyOnlyToStaticColumns,
                                                                            false,
-                                                                           false,
                                                                            false);
 
             return new UpdateStatement(type,
@@ -252,7 +251,6 @@ public class UpdateStatement extends ModificationStatement
                                                                            whereClause.build(),
                                                                            boundNames,
                                                                            applyOnlyToStaticColumns,
-                                                                           false,
                                                                            false,
                                                                            false);
 
